UI updated as phong's design

--- a/dBQueryWebApp/bin/dBQueryWebApp.dll.config
+++ b/dBQueryWebApp/bin/dBQueryWebApp.dll.config
@@ -9,7 +9,7 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
-
+<!---//conString = "User Id=COMP214_F19_ERS_18;Password=password;Data Source=199.212.26.208:1521/SQLD;";-->
   <connectionStrings>
     <add name="employeeDB"
          connectionString="User Id=COMP214_F19_ERS_18;Password=password;Data Source=199.212.26.208:1521/SQLD;" />
